implement pidfd_open

--- a/pkg/sentry/syscalls/linux/BUILD
+++ b/pkg/sentry/syscalls/linux/BUILD
@@ -33,6 +33,7 @@ go_library(
         "sys_mount.go",
         "sys_mq.go",
         "sys_msgqueue.go",
+        "sys_pidfd.go",
         "sys_pipe.go",
         "sys_poll.go",
         "sys_prctl.go",
@@ -89,6 +90,7 @@ go_library(
         "//pkg/sentry/fsimpl/host",
         "//pkg/sentry/fsimpl/iouringfs",
         "//pkg/sentry/fsimpl/lock",
+        "//pkg/sentry/fsimpl/pidfd",
         "//pkg/sentry/fsimpl/pipefs",
         "//pkg/sentry/fsimpl/signalfd",
         "//pkg/sentry/fsimpl/timerfd",
